--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@unimodules/core": "^7.1.2",
+    "@unimodules/react-native-adapter": "^6.3.9",
     "axios": "^1.6.5",
-    "expo": "~50.0.2",
-    "expo-font": "~11.10.2",
+    "expo": "^50.0.2",
+    "expo-font": "^11.10.2",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.3",
-    "expo-splash-screen": "~0.26.3",
+    "expo-router": "~3.4.4",
+    "expo-splash-screen": "^0.10.3",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
+    "expo-updates": "~0.24.8",
     "expo-web-browser": "~12.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -37,6 +40,7 @@
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.1",
+    "metro": "^0.80.4",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
